# rayserve-streamlit-apps

./: .gitignore  README.md  data.dvc  homework_2.ipynb  makefile  pyproject.toml  realisation.ipynb  requirements.txt
