[tool.poetry]
name = "homework-2"
version = "0.1.0"
description = ""
authors = ["Dmitry Nesmeyanov <miradg99@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_2"}]

[tool.poetry.dependencies]
python = "^3.10"
dvc = "^3.0.0"
gdown = "^4.7.1"
pandas = "^2.0.2"
ray = {extras = ["serve"], version = "^2.5.0"}
poethepoet = "^0.20.0"
transformers = "^4.30.2"
pyarrow = "^12.0.1"
torch = "2.0.0"
pydantic = "^1.10.9"
fastapi = "^0.97.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
install_pytorch = "pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu117"
